ArgoCD-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-backend
  namespace: default
  labels:
    app: community-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: community-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: community-backend
    spec:
      nodeSelector:
        node-role: application
      containers:
        - name: backend
          image: dice3059/dice-backend:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 20
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          volumeMounts:
            - name: upload-volume
              mountPath: /tmp/uploads
      volumes:
        - name: upload-volume
          emptyDir: {}
