ArgoCD-config/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-backend-svc
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: community-backend

    ports:
      - name: http
        port: 8081
        targetPort: http

        protocol: TCP
