ArgoCD-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-backend
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    # 한글 도메인 다이스.커뮤니티.한국 의 퓨니코드 표현
    - host: xn--2j1bs21ausd.xn--9i1b01onwqqzd.xn--3e0b707e
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-backend-svc
                port:
                  number: 8081
